# dfcgen-gtk

./: .clang_complete  .cproject  .gitignore  .project  .svn-authors  AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  description-pak  dfcgen-gtk.desktop  dfcgen-gtk.glade  dfcgen-gtk.gladep  dfcgen-gtk.prj  dfcgen-gtk.pws  dfcgen-gtk2.glade  libtool
data/: Makefile  Makefile.am  Makefile.in  differentiator1.dfc  fitting15_poly2.dfc  fitting21_poly2.dfc  fitting5_poly2.dfc  fitting7_poly2.dfc  fitting7_poly4.dfc  fitting9_poly2.dfc  fitting9_poly4.dfc  integrator_38rule.dfc  integrator_rect.dfc
data/filters/: Makefile.am  Makefile.in  differentiator2.dfc  integrator_simpson.dfc  integrator_trapez.dfc
data/pixmaps/: Makefile.am  Makefile.in  dfcgen.fig
data/templates/: Makefile.am  Makefile.in  export.c  export.m  export.txt
doc/: Doxyfile  Makefile  Makefile.am  Makefile.in  dfcgen.sty
include/: Makefile  Makefile.am  Makefile.in  base.h  cairoPlot.h  cfgSettings.h  designDlg.h  dfcProject.h  dfcgen.h  dialogSupport.h  doxygen.h  editDlg.h  fileDlg.h  filterPrint.h  filterResponse.h  filterSupport.h  gui.h  helpDlg.h  linFirDesignDlg.h  linFirFilter.h  mainDlg.h  mathFuncs.h  mathMisc.h  mathPoly.h  miscDesignDlg.h  miscFilter.h  projectFile.h  responseDlg.h  responsePlot.h  responseWin.h  rootsPlot.h  stdIirDesignDlg.h  stdIirFilter.h  support.h
pixmaps/: Makefile  Makefile.am  Makefile.in
po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  de.gmo  de.po  dfcgen-gtk.pot
src/: Makefile  Makefile.am  Makefile.in  cairoPlot.c  cfgSettings.c  designDlg.c  dfcProject.c  dialogSupport.c  editDlg.c  fileDlg.c  filterPrint.c  filterResponse.c  filterSupport.c  helpDlg.c  linFirDesignDlg.c  linFirFilter.c  main.c  mainDlg.c  mathFuncs.c  mathMisc.c  mathPoly.c  miscDesignDlg.c  miscFilter.c  projectFile.c  responseDlg.c  responsePlot.c  responseWin.c  rootsPlot.c  stdIirDesignDlg.c  stdIirFilter.c  support.c
