## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

dfcgen_gtk_datadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/@PACKAGE@

dfcgen_gtk_data_DATA = \
	differentiator1.dfc\
	differentiator2.dfc\
	integrator_38rule.dfc\
	integrator_rect.dfc\
	integrator_simpson.dfc\
	integrator_trapez.dfc\
	fitting15_poly2.dfc\
	fitting21_poly2.dfc\
	fitting5_poly2.dfc\
	fitting7_poly2.dfc\
	fitting7_poly4.dfc\
	fitting9_poly2.dfc\
	fitting9_poly4.dfc

EXTRA_DIST = $(dfcgen_gtk_data_DATA)
