## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

dfcgen_gtk_docdir = $(prefix)/@NO_PREFIX_PACKAGE_DOC_DIR@

dfcgen_gtk_doc_DATA = \
	dfcgen.sty\
	Doxyfile

EXTRA_DIST = $(dfcgen_gtk_doc_DATA)
