## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

dfcgen_gtk_includedir = $(pkgincludedir)

dfcgen_gtk_include_DATA = \
	base.h\
	cairoPlot.h\
	cfgSettings.h\
	designDlg.h\
	dfcProject.h\
	dfcgen.h\
	dialogSupport.h\
	doxygen.h\
	editDlg.h\
	fileDlg.h\
	filterResponse.h\
	filterSupport.h\
	gui.h\
	helpDlg.h\
	linFirDesignDlg.h\
	linFirFilter.h\
	mainDlg.h\
	mathFuncs.h\
	mathMisc.h\
	mathPoly.h\
	miscDesignDlg.h\
	miscFilter.h\
	projectFile.h\
	responseDlg.h\
	responsePlot.h\
	responseWin.h\
	rootsPlot.h\
	stdIirDesignDlg.h\
	stdIirFilter.h\
	support.h

EXTRA_DIST = $(dfcgen_gtk_include_DATA)
