## -*- Makefile -*-
##
## Copyright (C) 2006, 2011 Ralf Hoppe <ralf.hoppe@ieee.org>
##
## Version:  $Header$
##
## Process this file with automake to produce Makefile.in
##

noinst_HEADERS = \
	base.h\
	cairoPlot.h\
	cfgSettings.h\
	designDlg.h\
	dfcProject.h\
	dfcgen.h\
	dialogSupport.h\
	doxygen.h\
	editDlg.h\
	fileDlg.h\
	filterResponse.h\
	filterSupport.h\
	gui.h\
	helpDlg.h\
	linFirDesignDlg.h\
	linFirFilter.h\
	mainDlg.h\
	mathFuncs.h\
	mathMisc.h\
	mathPoly.h\
	miscDesignDlg.h\
	miscFilter.h\
	projectFile.h\
	responseDlg.h\
	responsePlot.h\
	responseWin.h\
	rootsPlot.h\
	stdIirDesignDlg.h\
	stdIirFilter.h\
	support.h
