## -*- mode: makefile-automake -*-
##
## Copyright (C) 2006, 2011-2013, 2019, 2020 Ralf Hoppe <ralf.hoppe@dfcgen.de>
##

noinst_HEADERS = \
	base.h\
	cairoPlot.h\
	cfgSettings.h\
	designDlg.h\
	dfcProject.h\
	dfcgen.h\
	dialogSupport.h\
	editDlg.h\
	fileDlg.h\
	filterResponse.h\
	filterSupport.h\
	gui.h\
	helpDlg.h\
	linFirDesignDlg.h\
	linFirFilter.h\
	mainDlg.h\
	mathFuncs.h\
	mathMisc.h\
	mathPoly.h\
	miscDesignDlg.h\
	miscFilter.h\
	projectFile.h\
	responseDlg.h\
	responsePlot.h\
	responseWin.h\
	rootsPlot.h\
	stdIirDesignDlg.h\
	stdIirFilter.h\
	filterPrint.h\
	support.h
