## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

dfcgen_gtk_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

dfcgen_gtk_pixmaps_DATA = \
	dfcgen.png\
	attenuation.png\
	charfunc.png\
	grpdelay.png\
	impulse.png\
	phase.png\
	phasedelay.png\
	step.png

EXTRA_DIST = $(dfcgen_gtk_pixmaps_DATA)
