## -*- Makefile -*-
##
## Copyright (C) 2006, 2011-2012 Ralf Hoppe <ralf.hoppe@ieee.org>
##
## Version:  $Id$
##
## Process this file with automake to produce Makefile.in
##

filtersdir = $(pkgfiltersdir)

dist_filters_DATA = \
	differentiator1.dfc\
	differentiator2.dfc\
	integrator_38rule.dfc\
	integrator_rect.dfc\
	integrator_simpson.dfc\
	integrator_trapez.dfc\
	fitting15_poly2.dfc\
	fitting21_poly2.dfc\
	fitting5_poly2.dfc\
	fitting7_poly2.dfc\
	fitting7_poly4.dfc\
	fitting9_poly2.dfc\
	fitting9_poly4.dfc
