##
## Copyright (c) 2006, 2011-2013 Ralf Hoppe <ralf.hoppe@ieee.org>
##
## Version:  $Id$
##
## Process this file with automake to produce Makefile.in
##

pixmapsdir = $(pkgpixmapsdir)

dist_pixmaps_DATA = \
	dfcgen-gtk.png\
	attenuation.png\
	charfunc.png\
	grpdelay.png\
	impulse.png\
	phase.png\
	phasedelay.png\
	step.png\
	amplitude.png

